--- a/aqa_send/Cargo.toml
+++ b/aqa_send/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hyper = { version = "0.14.16", features = ["server", "http2", "tcp"] }
+tokio = { version = "1.15.0", features = ["rt-multi-thread", "net", "macros"] }
