--- a/aqa_send/Cargo.toml
+++ b/aqa_send/Cargo.toml
@@ -10,3 +10,4 @@ hyper = { version = "0.14.16", features = ["server", "http1", "http2", "tcp"] }
 tokio = { version = "1.15.0", features = ["rt-multi-thread", "net", "macros"] }
 futures = "0.3.19"
 log = "0.4.14"
+thiserror = "1.0.30"
