--- a/aqa_send/Cargo.toml
+++ b/aqa_send/Cargo.toml
@@ -13,3 +13,6 @@ log = "0.4.14"
 thiserror = "1.0.30"
 uuid = { version = "0.8.2", features = ["v4"] }
 bytes = "1.1.0"
+rocksdb = "0.17.0"
+serde = { version = "1.0.136", features = ["derive"] }
+bincode = "1.3.3"
