--- a/aqa_send/Cargo.toml
+++ b/aqa_send/Cargo.toml
@@ -15,4 +15,5 @@ uuid = { version = "0.8.2", features = ["v4"] }
 bytes = "1.1.0"
 rocksdb = "0.17.0"
 serde = { version = "1.0.136", features = ["derive"] }
+serde_json = "1.0.78"
 bincode = "1.3.3"
