--- a/aqa_send/Cargo.toml
+++ b/aqa_send/Cargo.toml
@@ -17,3 +17,6 @@ rocksdb = "0.17.0"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.78"
 bincode = "1.3.3"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+systemd-socket-activation = { features = ["dlopen"], git = "https://github.com/aQaTL/systemd-socket-activation.git", branch = "aqatl/link-systemd" }
