--- a/aqa_send/Cargo.toml
+++ b/aqa_send/Cargo.toml
@@ -11,12 +11,14 @@ tokio = { version = "1.15.0", features = ["rt-multi-thread", "net", "macros", "f
 futures = "0.3.19"
 log = "0.4.14"
 thiserror = "1.0.30"
-uuid = { version = "0.8.2", features = ["v4"] }
+uuid = { version = "0.8.2", features = ["v4", "serde"] }
 bytes = "1.1.0"
 rocksdb = "0.17.0"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.78"
 bincode = "1.3.3"
 
-[target.'cfg(target_os = "linux")'.dependencies]
-systemd-socket-activation = { features = ["dlopen"], git = "https://github.com/aQaTL/systemd-socket-activation.git", branch = "aqatl/link-systemd" }
+[target.'cfg(target_os = "linux")'.dependencies.systemd-socket-activation]
+features = ["dlopen"]
+git = "https://github.com/aQaTL/systemd-socket-activation.git"
+branch = "aqatl/link-systemd"
