--- a/aqa_send/Cargo.toml
+++ b/aqa_send/Cargo.toml
@@ -21,4 +21,4 @@ bincode = "1.3.3"
 [target.'cfg(target_os = "linux")'.dependencies.systemd-socket-activation]
 features = ["dlopen"]
 git = "https://github.com/aQaTL/systemd-socket-activation.git"
-branch = "aqatl/link-systemd"
+tag = "v1.1.0"
