--- a/aqa_send/Cargo.toml
+++ b/aqa_send/Cargo.toml
@@ -13,10 +13,10 @@ log = "0.4.14"
 thiserror = "1.0.30"
 uuid = { version = "0.8.2", features = ["v4", "serde"] }
 bytes = "1.1.0"
-rocksdb = "0.17.0"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.78"
 bincode = "1.3.3"
+sqlx = { version = "0.5.11", features = ["runtime-tokio-native-tls", "sqlite", "migrate"]}
 
 aqa_logger = { path = "../aqa_logger" }
 
