--- a/aqa_send/Cargo.toml
+++ b/aqa_send/Cargo.toml
@@ -15,7 +15,7 @@ uuid = { version = "0.8.2", features = ["v4", "serde"] }
 bytes = "1.1.0"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.78"
-bincode = "1.3.3"
+ctrlc = { version = "3.2.2", features = ["termination"] }
 
 aqa_logger = { path = "../aqa_logger" }
 
