--- a/aqa_send_web/package.json
+++ b/aqa_send_web/package.json
@@ -27,9 +27,11 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "lint-staged": "^9.5.0",
+    "naive-ui": "^2.28.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "vfonts": "^0.0.3"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
