--- a/aqa_send/Cargo.toml
+++ b/aqa_send/Cargo.toml
@@ -23,6 +23,7 @@ tracing = "0.1.36"
 tracing-subscriber = "0.3.15"
 console-subscriber = "0.1.8"
 tracing-appender = "0.2.2"
+pico-args = "0.5.0"
 
 [target.'cfg(target_os = "linux")'.dependencies.systemd-socket-activation]
 features = ["dlopen"]
