--- a/aqa_send/Cargo.toml
+++ b/aqa_send/Cargo.toml
@@ -24,6 +24,9 @@ tracing-subscriber = "0.3.15"
 console-subscriber = "0.1.8"
 tracing-appender = "0.2.2"
 pico-args = "0.5.0"
+console = "0.15.1"
+zeroize = "1.5.7"
+argon2 = "0.4.1"
 
 [target.'cfg(target_os = "linux")'.dependencies.systemd-socket-activation]
 features = ["dlopen"]
