Password input on the website

--- a/simple-website/tsconfig.json
+++ b/simple-website/tsconfig.json
@@ -2,6 +2,7 @@
 	"include": ["./**/*"],
 	"exclude": ["./out"],
 	"compilerOptions": {
+		"lib": ["es2021", "dom"],
 		"allowJs": true,
 		"checkJs": true,
 		"noEmit": true
