--- a/aqa_send/Cargo.toml
+++ b/aqa_send/Cargo.toml
@@ -27,6 +27,7 @@ zeroize = "1.5.7"
 argon2 = "0.4.1"
 dashmap = "5.4.0"
 nom = "7.1.1"
+urlencoding = "2.1.3"
 
 [dependencies.aqa_logger]
 git = "https://github.com/aQaTL/aqa_logger"
